fix for animation on safari 12

--- a/css/style.css
+++ b/css/style.css
@@ -150,11 +150,19 @@ button:focus,
 }
 
 .letter {
-  animation: 5s color-change infinite alternate linear;
+  animation-duration: 5s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
 
 .letter__move {
-  animation: 10s position-move infinite alternate linear;
+  animation-duration: 10s;
+  animation-name: position-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
 
 .container {
