--- a/css/style.production.css
+++ b/css/style.production.css
@@ -183,13 +183,29 @@ button:focus,
 }
 
 .letter {
-  -webkit-animation: 5s color-change infinite alternate linear;
-  animation: 5s color-change infinite alternate linear;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-name: color-change;
+  animation-name: color-change;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
 .letter__move {
-  -webkit-animation: 10s position-move infinite alternate linear;
-  animation: 10s position-move infinite alternate linear;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
+  -webkit-animation-name: position-move;
+  animation-name: position-move;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
 .container {
